dart-sass導入→importからuseへ切り替え

--- a/src/common/inc/header.html
+++ b/src/common/inc/header.html
@@ -81,9 +81,10 @@
     <!-- ハンバーガーボタン -->
     <div class="burger-btn_container">
       <div class="burger-btn" id="burger-btn">
-        <span class="bar bar_top"></spn>
+        <span class="bar bar_top"></span>
         <span class="bar bar_middle"></span>
         <span class="bar bar_bottom"></span>
+        <div class="burger-btn_txt">MENU</div>
       </div>
     </div>
     <!-- ハンバーガーボタンはここまで -->
@@ -109,9 +110,65 @@
 
   <!-- ハンバーガーメニュー -->
   <div class="burger-menu" id="burger-menu">
-    <div class="burger-menu_inner">
-      
-    </div>
+
+    <nav class="burger-menu_inner">
+
+      <!-- ナビリスト -->
+      <ul class="burger-menu_list">
+        <li class="burger-menu_list-item">
+          <a href="#" class="link">
+            CONCEPT
+          </a>
+        </li>
+        <li class="burger-menu_list-item">
+          <a href="#" class="link">
+            INTERIOR
+          </a>
+        </li>
+        <li class="burger-menu_list-item">
+          <a href="#" class="link">
+            MENU
+          </a>
+        </li>
+        <li class="burger-menu_list-item">
+          <a href="#" class="link">
+            STYLIST
+          </a>
+        </li>
+        <li class="burger-menu_list-item">
+          <a href="#" class="link">
+            ACCESS
+          </a>
+        </li>
+      </ul>
+      <!-- ナビリストはここまで -->
+
+      <!-- SNSエリア -->
+      <div class="sns_wrapper">
+        <p class="lead-txt">
+          LINE・Instagramからご予約いただけます。
+        </p>
+
+        <ul class="sns-icon_list flex_wrapper">
+          <li class="sns-icon_list-item line-icon">
+            <a href="#" class="link">
+              <div class="img_wrapper">
+                <img src="/common/img/LINE_Brand_icon.png" alt="LINEのアイコン">
+              </div>
+            </a>
+          </li>
+          <li class="sns-icon_list-item instagram-icon">
+            <a href="#" class="link">
+              <div class="img_wrapper">
+                <img src="/common/img/icon-instagram.png" alt="instagramのアイコン">
+              </div>
+            </a>
+          </li>
+        </ul>
+      </div>
+      <!-- SNSエリアはここまで -->
+
+    </nav>
   </div>
   <!-- ハンバーガーメニューはここまで -->
 
