ハンバーガーメニュー実装

--- a/src/common/inc/header.html
+++ b/src/common/inc/header.html
@@ -79,8 +79,8 @@
   <div class="header_inner flex_wrapper">
     
     <!-- ハンバーガーボタン -->
-    <div class="burger-btn_container">
-      <div class="burger-btn" id="burger-btn">
+    <div class="burger-btn_container" id="burger-btn">
+      <div class="burger-btn">
         <span class="bar bar_top"></span>
         <span class="bar bar_middle"></span>
         <span class="bar bar_bottom"></span>
@@ -98,7 +98,7 @@
     <!-- ヘッダーロゴはここまで -->
 
     <!-- 予約ボタン -->
-    <div class="reserve-btn_wrapper">
+    <div class="reserve-btn_wrapper" id="reserve-btn">
       <button class="reserve-btn">
         ご予約
       </button>
@@ -167,6 +167,14 @@
         </ul>
       </div>
       <!-- SNSエリアはここまで -->
+
+      <div class="reserve_wrapper">
+        <div class="reserve-btn_wrapper" id="reserve-btn">
+          <button class="reserve-btn">
+            ご予約
+          </button>
+        </div>
+      </div>
 
     </nav>
   </div>
