20221125_リリース時
初期リリース時の状態

--- a/src/common/inc/footer.html
+++ b/src/common/inc/footer.html
@@ -1,18 +1,36 @@
 <!-- フッター -->
 <footer class="footer">
   <div class="footer-inner">
-    <div class="footer-contents-wrapper flex-wrapper column_sp">
-      
-    </div>
+
+    <!-- snsエリア -->
+    <ul class="sns-icon_list flex_wrapper">
+      <li class="sns-icon_list-item">
+        <a href="https://page.line.me/?accountId=dls9873n" target="_blank" rel="noopener noreferrer" class="link">
+          <div class="img_wrapper">
+            <img src="/common/img/LINE_Brand_icon.jpg" alt="LINEアイコン">
+          </div>
+        </a>
+      </li>
+      <li class="sns-icon_list-item">
+        <a href="https://www.instagram.com/rinabskw/?igshid=YmMyMTA2M2Y%3D" target="_blank" rel="noopener noreferrer" class="link">
+          <div class="img_wrapper instagram">
+            <img src="/common/img/icon-instagram.png" alt="Instagramアイコン">
+          </div>
+        </a>
+      </li>
+    </ul>
+    <!-- snsエリアはここまで -->
 
     <!-- コピーライト -->
     <div class="copy-right">
-      &copy;Sunplanet Co.,Ltd. All rights reserved.
+      &copy; CLAN All rights reserved.
     </div>
 
     <!-- ページトップへの遷移ボタン（画面右下） -->
     <a href="#" id="page-top" class="page-top">
-      <img class="page-top-arrow" src="/common/img/icon_topArrow_pink.png" alt="ページトップへの遷移ボタン">
+      <div class="img_wrapper">
+        <img class="page-top-arrow" src="/common/img/icon_topArrow_white.png" alt="ページトップへの遷移ボタン">
+      </div>
     </a>
   </div>
 </footer>
