--- a/src/reservation/index.html
+++ b/src/reservation/index.html
@@ -1,21 +1,32 @@
 <!DOCTYPE html>
 <html lang="ja">
 
-<head>
+<head prefix=”og: https://ogp.me/ns# fb: https://ogp.me/ns/fb# article: https://ogp.me/ns/article#”>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="theme-color" content="#000000">
   <meta name="format-detection" content="telephone=no,email=no,address=no">
-  <title>ご予約の流れ | CLAN -ヘアサロン クラン- 大分/府内町の美容室</title>
-  <meta name="description" content="テストテストテストテスト">
+  <title>ご予約方法 | CLAN -ヘアサロン クラン- 大分/府内町の美容室</title>
+  <meta name="description" content="大分駅から徒歩5分 府内町の美容室CLANの「ご予約方法」に関するページです。">
 
   <!-- ファビコンの読み込み -->
   <link rel="icon" href="/common/img/favicon.ico">
 
+  <!-- OGPの設定 -->
+  <meta property="og:url" content="https://clan-hairsalon.com/reservation/" />
+  <meta property="og:type" content="article" />
+  <meta property="og:title" content="ご予約の流れ | CLAN -ヘアサロン クラン- 大分/府内町の美容室" />
+  <meta property="og:description" content="大分駅から徒歩5分 府内町の美容室CLANの「ご予約の流れ」に関するページです。" />
+  <meta property="og:site_name" content="CLAN -ヘアサロン クラン- 大分/府内町の美容室" />
+  <meta property="og:image" content="https://clan-hairsalon.com/common/img/ogp-img.jpg" />
+  <!-- OGPの設定はここまで -->
+
   <!-- Googleフォントの読み込み -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+JP:wght@300&display=swap" rel="stylesheet">
+  <link
+    href="https: //fonts.googleapis.com/css2? family= Noto+Sans+JP:wght@400;500;700 &family= Noto+Serif+JP:wght@300;400;500;600;700 & display=swap"
+    rel="stylesheet">
   <!-- Googleフォントの読み込みはここまで -->
 
   <!-- CSSの読み込み -->
@@ -33,7 +44,7 @@
   <div class="video_layer"></div>
 
   <!-- 背景 -->
-  <div class="bg_wrapper img_wrapper">
+  <div class="mod__bg_wrapper img_wrapper" id="mod__bg_wrapper">
     <img src="/common/img/article_bg.jpg" alt="下層ページの背景">
   </div>
 
@@ -43,8 +54,100 @@
   <!-- メインコンテンツ -->
   <main class="main" id="top">
 
-    <h1 class="mod__h1-ttl">ご予約の流れ</h1>
+    <div class="mod__h1-ttl_wrapper">
+      <h1 class="mod__h1-ttl">ご予約方法</h1>
+    </div>
 
+    <div class="mod__section_wrapper">
+      <section class="mod__section first-section" id="instagram-section">
+        <h2 class="mod__h2-ttl">
+          ご予約方法詳細
+        </h2>
+        
+        <p class="mod__normal-txt">
+          ヘアサロンCLAN公式Instagramまたは公式LINEへ「<span class="mod__strong_txt">お名前</span>」「<span class="mod__strong_txt">ご予約日時</span>」「<span class="mod__strong_txt">ご希望メニュー</span>」の3点をご連絡ください。
+        </p>
+
+        <!-- Instagram動線パーツ -->
+        <div class="mod__sns-btn instagram flex_wrapper">
+          <a href="https://www.instagram.com/rinabskw/?igshid=YmMyMTA2M2Y%3D" target="_blank" rel="noopener noreferrer" class="link">
+            <div class="mod__sns-ttl_container flex_wrapper">
+              <div class="mod__sns-btn-icon img_wrapper">
+                <img src="/common/img/icon-instagram.png" alt="Instagramアイコン">
+              </div>
+              <h4 class="mod__sns-btn-ttl_wrapper">
+                <p class="mod__sns-btn-ttl_acc-name">ヘアサロン CLAN</p>
+                <p class="mod__sns-btn-ttl_sns-name">公式Instagramアカウント</p>
+              </h4>
+            </div>
+            <div class="mod__sns-description_conrainer">
+              <p class="mod__sns-btn-description">
+                ストーリーから予約の空き状況をご確認いただけます。<br>
+                フォローはこちらから!
+              </p>
+            </div>
+          </a>
+        </div>
+        <!-- Instagram動線パーツはここまで -->
+
+        <!-- LINE友だち追加ボタン -->
+        <div class="mod__sns-btn line flex_wrapper">
+          <a href="https://page.line.me/?accountId=dls9873n" target="_blank" rel="noopener noreferrer" class="link">
+            <div class="mod__sns-ttl_container flex_wrapper">
+              <div class="mod__sns-btn-icon img_wrapper line-icon">
+                <img src="/common/img/LINE_Brand_icon.png" alt="LINEアイコン">
+              </div>
+              <h4 class="mod__sns-btn-ttl_wrapper line">
+                <p class="mod__sns-btn-ttl_acc-name">ヘアサロン CLAN</p>
+                <p class="mod__sns-btn-ttl_sns-name">公式LINEアカウント</p>
+              </h4>
+            </div>
+            <div class="mod__sns-description_conrainer">
+              <p class="mod__sns-btn-description">
+                お友だち追加はこちらから
+              </p>
+            </div>
+          </a>
+        </div>
+        <!-- LINE友だち追加ボタンはここまで -->
+
+        <div class="mod__txt-link_wrapper menu-link">
+          <a href="/#menu" class="mod__txt-link">
+            <span class="mod__txt-link_inner">
+              メニューリストはこちら
+            </span>
+          </a>
+        </div>
+
+        <div class="mod__list-wrapper">
+          <ul class="mod__list">
+            <li class="mod__list_item">
+              お名前は「フルネーム＋フリガナ」の記載をお願いします。
+            </li>
+            <li class="mod__list_item">
+              ご予約希望日は可能であれば第2候補まで記載をお願いします。
+            </li>
+            <li class="mod__list_item">
+              お店のご予約状況はCLAN公式Instagramのストーリーからご確認いただけます。
+            </li>
+            <li class="mod__list_item">
+              当店からの確認連絡をもってご予約確定とさせていただきます。
+            </li>
+          </ul>
+        </div>
+  
+        <p class="mod__annotation-txt">
+          2営業日以内に当店からの返信が無い場合、お手数ですが改めてご連絡をお願い致します。
+        </p>
+      </section>
+    </div>
+    <!-- メインコンテンツはここまで -->
+
+    <div class="mod__topBackBtn-wrapper">
+      <a class="mod__topBackBtn" href="/">
+        TOPページへ戻る
+      </a>
+    </div>
   </main>
   <!-- メインコンテンツはここまで -->
 
